--- a/sass/layouts/_explore.scss
+++ b/sass/layouts/_explore.scss
@@ -26,7 +26,8 @@
         box-shadow: 3px 3px 17px darken(grey, 2);
         border: none;
         &:hover {
-            opacity: 0.7;
+        opacity: 0.7;
+        cursor: pointer;
         }
     }
 }
