modification de base.scss et de main.scss

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-@import "./bases/reset.scss",
+@import "./base/reset.scss",
 "./bases/typography.scss";
 @import "./utils/maps.scss",
 "./utils/keyframes.scss",
