--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
 @import "./base/reset.scss",
-"./bases/typography.scss";
+"./base/typography.scss";
 @import "./utils/maps.scss",
 "./utils/keyframes.scss",
 "./utils/mixins.scss";
